--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
             name="keywords"
             content="route planner,shortest path,maps,openstreetmap,android,navigation,routenplaner,gis"
         />
+        <link rel="manifest" href="./manifest.json" />
         <!-- config.js is not included in bundle.js -->
         <script src="config.js"></script>
         <title>Driving Directions - GraphHopper Maps</title>
@@ -39,7 +40,25 @@
                 display: block;
                 color: inherit;
             }
+
+            .slider-container {
+                position: absolute;
+                z-index: 2;
+                bottom: 300px;
+  
+            }
+
+            .slider {
+                width: 200px;
+            }
+
+            .slider-container label {
+                margin-right: 5px;
+            }
+
+
         </style>
     </head>
     <body></body>
 </html>
+
